src/test/ui/asm/invalid-inline-asm-2.rs
#![feature(asm)]

fn main() {
    let a: usize;

    unsafe {
        asm!("" : "=d"(a) : : : );
        //~^ ERROR couldn't allocate output register for constraint 'd'
    }
}
